test/configCases/errors/generator-generate-error/test.config.js
module.exports = {
	findBundle: function (i, options) {
		return [
			"file_json.bundle0.js",
			"source_txt.bundle0.js",
			"file_svg.bundle0.js",
			"inline_txt.bundle0.js",
			"style_css.bundle0.js",
			"module_js.bundle0.js",
			"style-other_css.bundle0.js",
			"style_modules_css.bundle0.js",
			"async-wasm_wat.bundle0.js",
			"bundle0.js"
		];
	}
};
